# Hive

./: .gitignore  .lazygit-working-baseline  ADVANCED_PARALLEL_STRATEGY.md  AI_CLI_INTEGRATION_PLAN.md  AI_ENHANCED_AUTO_ACCEPT_IMPLEMENTATION.md  AI_HELPERS_CONTEXT_ENHANCEMENT_PLAN.md  AI_HELPERS_CONTROL_FLOW.md  AI_HELPER_ECOSYSTEM_ARCHITECTURE.md  AI_HELPER_INTELLIGENCE_VERIFICATION.md  ANALYTICS_IMPLEMENTATION_REPORT.md  ANALYTICS_MIGRATION_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_PRINCIPLE_CARD.md  BORROW_CHECKER_FIXES.md  BUG_FIX_PLAN.md  CLAUDE.md  CLAUDE_CODE_IMPLEMENTATION.md  CLAUDE_CODE_INSTALLATION_GUIDE.md  CLAUDE_CODE_INTEGRATION_STATUS.md  CLAUDE_CODE_OUTPUT_FORMAT.md  CLI_EXPERIENCE.md  CODEBASE_INTELLIGENCE_SYSTEM.md  CODE_EDITOR_IMPLEMENTATION_PLAN.md  CODE_OF_CONDUCT.md  COMPLETE_QUICKSTART_READY.md  COMPLETE_TUI_DESIGN.md  COMPONENT_ARCHITECTURE_FIXES.md  COMPREHENSIVE_PROJECT_STATUS.md  COMPREHENSIVE_SESSION_CONTEXT.md  COMPREHENSIVE_TESTING_PLAN.md  CONFIG_FIX_NOTE.md  CONSENSUS_ANTI_HALLUCINATION_SYSTEM.md  CONSENSUS_ARCHITECTURE_2025.md  CONSENSUS_CONFIG_UPDATE.md  CONSENSUS_ENGINE_INTEGRATION.md  CONSENSUS_FILE_SYSTEM_INTEGRATION.md  CONSENSUS_FIX_TRACKING.md  CONSENSUS_IMPLEMENTATION_SUMMARY.md  CONSENSUS_INTEGRATION_IMPLEMENTATION_REPORT.md  (+207 more)
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: logo-base64.txt
benches/: consensus_benchmarks.rs  consensus_pipeline.rs  database_operations.rs  repository_analysis.rs  typescript_comparison.rs
cloudflare/: crypto-utils.js  package-lock.json  package.json  secure-worker.js  worker-configuration.d.ts  wrangler.toml
distribution/: build_all.sh  test_distribution.sh
docs/: AI_ENHANCED_CAPABILITIES_DESIGN.md  AI_HELPER_FULL_CAPABILITIES.md  AI_HELPER_VERIFICATION.md  CURATOR_DRIVEN_EXECUTION.md  ci-guidelines.md
electron-poc/: .env.production  .gitignore  AGENTS.md  CLAUDE_AGENT_SDK_INTEGRATION.md  COMPLIANCE_ANALYSIS.md  COMPONENT_SPECIFICATIONS.md  CONSENSUS_ROUND_LIMIT_FIX.md  CONSENSUS_TRANSFORMATION_PLAN.md  CONVERSATION_CONTEXT.md  GAP_ANALYSIS_ITERATIVE_CONSENSUS.md  ITERATIVE_CONSENSUS_DESIGN.md  MASTER_ARCHITECTURE.md  MASTER_ARCHITECTURE_DESKTOP.md  MEMORY_INTEGRATION_PLAN.md  MEMORY_SYSTEM_NAMING.md  PROCESS_ARCHITECTURE_2025.md  SETTINGS_IMPLEMENTATION.md  TERMINAL_IMPLEMENTATION_PLAN.md  UNIVERSAL_MEMORY_INFRASTRUCTURE.md  VSCODE_GIT_IMPLEMENTATION_PLAN.md  distribution.md  forge.config.ts  git-test.js  hive-logo-base64.txt  package-lock.json  package.json  playwright.config.ts  run-app.sh  startup-neural.js  startup-preload.js  startup.html  test-cli-tools.js  test-cline.js  test-consensus-events.js  test-consensus.html  test-diff.txt  test-direct-consensus.js  test-file-click.js  test-gemini-cli.js  test-git-strategy-direct.ts  (+27 more)
examples/: auto-format.json  beautiful_curator_display.rs  branch_menu_example.rs  claude_executor_demo.rs  cost-control.json  dangerous-hook.json  event_bus_demo.rs  git_features_demo.rs  mcp_demo.rs  memory-analytics-hook.json  menu_system_demo.rs  openrouter_test.rs  planning-hook.json  problems_panel_integration.rs  production-guard.json  quality-gate.json  repository_discovery_example.rs  repository_dropdown_example.rs  repository_selector_demo.rs  security-hook.json  security_demo.rs  test.js  test.py  test.rs  test_consensus_desktop.rs  test_database.rs  test_database_simple.rs  test_db_working.rs  test_desktop_consensus.rs  test_file_explorer.rs  test_openrouter_integration.rs  test_problems_panel.rs  test_quickstart.rs  test_quickstart_db.rs  test_quickstart_direct.rs  test_quickstart_simple.rs
frontend/: index.html  main.js  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
git_demo/: Cargo.toml
ide/: mcp-endpoints.json  setup.sh  test-integration.sh
migrations/: 001_initial_schema.sql  002_knowledge_tables.sql  003_memory_clustering.sql  004_sync_tracking.sql  005_indexes.sql  006_fix_consensus_profiles_schema.sql  007_seed_initial_models.sql  008_set_default_profile.sql  009_fix_consensus_profiles_to_match_typescript.sql  010_remove_local_credit_tracking.sql  010_rollback.sql  011_add_licenses_table.sql  012_add_daily_usage_tracking.sql  013_add_consensus_facts_table.sql  014_add_knowledge_conversations.sql
npm/: .npmignore  CHANGELOG.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  index.js  package-lock.json  package.json  publish.sh
phase1_working/: Cargo.toml  main.rs
python/: model_service.py  requirements.txt
release/: FINAL_LAUNCH_AUTHORIZATION.md  LAUNCH_ANNOUNCEMENT_STRATEGY.md  PRODUCTION_LAUNCH_REPORT.md  PRODUCTION_MONITORING_SETUP.md  SUPPORT_INFRASTRUCTURE_DEPLOYMENT.md  WEBSITE_DEPLOYMENT_SPEC.md
reports/: coverage_report.html  final_qa_report.md  integration_results.json  performance_validation.md
scripts/: benchmark_suite.sh  build-all-platforms.sh  build-and-sign-release.sh  build-linux-appimage.sh  build-macos-complete.sh  build-windows-msi.sh  check-certificate-status.sh  clone_ai_helpers.sh  comprehensive_qa_validation.sh  create-adhoc-dmg.sh  create-dmg.sh  create-r2-bucket.sh  create-r2-proxy-worker.js  deploy.sh  entitlements.plist  generate_test_report.sh  get-zone-id.sh  github-ci-setup.sh  optimize_binary.sh  package-macos.sh  prepare-windows-binary.sh  profile_performance.sh  qa-validate.sh  quality-gate.sh  r2-releases-worker.js  r2-releases-wrangler.toml  run-comprehensive-tests.sh  run_comprehensive_tests.sh  setup-r2-config.sh  sign-macos-force.sh  sign-macos.sh  sign-notarize-macos.sh  test-download-experience.sh  test-r2-connection.sh  update-r2-structure.sh  upload-to-r2.sh  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  lib.rs  main.complex.rs  main.rs  main_backup.rs  main_simple.rs  minimal.rs  simple_test.rs  state.rs  test_window.rs
src-tauri/src-tauri/src/bridge/: git.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/bridge/: git.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/commands/: analytics.rs  consensus.rs  filesystem.rs  mod.rs  settings.rs  terminal.rs
(+921 files in other folders)
