[package]
name = "hive-ai"
version = "0.1.0"
edition = "2021"
authors = ["HiveTechs Collective <team@hivetechs.com>"]
description = "AI-powered codebase intelligence platform with multi-model consensus"
repository = "https://github.com/hivetechs/hive"
license = "Proprietary"
keywords = ["ai", "code-intelligence", "development-tools", "consensus", "mcp"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# Utilities
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
num_cpus = "1.16"
walkdir = "2.4"

# Cache dependencies
lru = "0.12"
sha2 = "0.10"
flate2 = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-client = "0.12"
bytes = "1.5"

# MCP and LSP servers
tower = "0.4"
tower-service = "0.3"
tower-layer = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
async-stream = "0.3"
pin-project = "1.1"
serde-wasm-bindgen = "0.6"
hyper-tungstenite = "0.11"
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# CLI and UI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
console = "0.15"
atty = "0.2"
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"
ratatui = "0.27"

# Tree-sitter for AST parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-php = "0.21"
tree-sitter-swift = "0.5"

# Database
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json", "uuid", "bundled-full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
hex = "0.4"
shellexpand = "3.1"
tempfile = "3.8"

# Graph algorithms
petgraph = "0.6"

# Pattern matching
regex = "1.10"
serde_yaml = "0.9"
url = "2.5"
glob = "0.3"
notify = "6.1"

# Diff and text processing
similar = "2.4"
colored = "2.1"

# Random number generation
rand = "0.8"

# Auto-update dependencies
semver = "1.0"

# Vector embeddings and ML (disabled due to dependency conflicts)
# candle-core = { version = "0.3", optional = true }
# candle-nn = { version = "0.3", optional = true }
# candle-transformers = { version = "0.3", optional = true }
# hf-hub = { version = "0.3", features = ["tokio"], optional = true }
# tokenizers = { version = "0.15", optional = true }

# Math utilities
approx = "0.5"

# Web framework for API
warp = "0.3"

# Base64 encoding
base64 = "0.21"

# Async trait
async-trait = "0.1"

# Memory mapping for fast file access
memmap2 = "0.9"

# Performance profiling (moved from dev-dependencies)
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }

[dev-dependencies]
# Testing framework
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"

# Additional testing tools
proptest = "1.4"                  # Property-based testing
mockall = "0.12"                  # Mock generation
wiremock = "0.5"                  # HTTP mocking
assert_cmd = "2.0"                # CLI testing
predicates = "3.0"                # Test predicates
similar-asserts = "1.5"           # Better assertion output
insta = "1.34"                    # Snapshot testing
test-log = "0.2"                  # Log output in tests

# Code coverage tools  
# cargo-tarpaulin = { version = "0.27", optional = true }  # Removed - dev deps can't be optional
# cargo-llvm-cov = { version = "0.5", optional = true }    # Removed - dev deps can't be optional

# Performance testing
# pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }  # Moved to regular deps
memory-stats = "1.1"              # Memory usage tracking

# Security testing
# cargo-audit = { version = "0.20", optional = true }  # Removed - dev deps can't be optional
# cargo-deny = { version = "0.14", optional = true }    # Removed - dev deps can't be optional

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Production build profile for maximum optimization
[profile.production]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = "fat"               # Full link-time optimization
codegen-units = 1         # Single codegen unit for maximum optimization
strip = "symbols"         # Strip all symbols
panic = "abort"           # Abort on panic for smaller binary
overflow-checks = false   # Disable overflow checks for performance

[features]
default = ["local-optimizations"]

# Core features
local-optimizations = []   # Local performance optimizations
production = [            # Production build features
    "minimal-dependencies",
    "static-linking",
    "optimized-consensus"
]

# Dependency control
minimal-dependencies = [] # Exclude optional dependencies
static-linking = []       # Static linking configuration
optimized-consensus = []  # Consensus pipeline optimizations

# Development features
debug-mode = []          # Enable debug logging and assertions
profiling = ["pprof"]    # Enable profiling capabilities
embeddings = []          # Enable embedding functionality
testing = []              # Testing utilities (tools available separately)

# Testing feature groups
unit-tests = []          # Enable unit testing optimizations
integration-tests = []  # Enable integration testing with real APIs
performance-tests = ["profiling"]  # Performance benchmarking
security-tests = []  # Security testing (tools available separately)
coverage-reporting = []  # Coverage tools (available separately)

# Memory and ML features (disabled due to dependency conflicts)
# embeddings = [           # Enable vector embeddings support
#     "candle-core",
#     "candle-nn", 
#     "candle-transformers",
#     "hf-hub",
#     "tokenizers"
# ]

[[bin]]
name = "hive"
path = "src/main.rs"

[lib]
name = "hive_ai"
path = "src/lib.rs"

[[bench]]
name = "consensus_pipeline"
harness = false

[[bench]]
name = "database_operations"
harness = false

[[bench]]
name = "repository_analysis"
harness = false

[[bench]]
name = "typescript_comparison"
harness = false