[package]
name = "hive"
version = "2.0.2"
edition = "2021"
authors = ["HiveTechs Collective <team@hivetechs.com>"]
description = "AI-powered codebase intelligence platform with multi-model consensus"
repository = "https://github.com/hivetechs/hive"
license = "Proprietary"
keywords = ["ai", "code-intelligence", "development-tools", "consensus", "mcp"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Database (removed sqlx - using rusqlite instead)

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

# Utilities
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
semver = "1.0"
shellexpand = "3.1"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Desktop App (Dioxus) dependencies - 100% Rust stack
dioxus = { version = "0.6.3", features = ["desktop"], optional = true }
dioxus-desktop = { version = "0.6.3", optional = true }
pulldown-cmark = "0.9"
dioxus-router = { version = "0.6.3", optional = true }

# Additional Dioxus utilities
dioxus-signals = { version = "0.6.3", optional = true }
manganis = { version = "0.7.0-alpha.2", optional = true }

# Dioxus SDK for enhanced desktop features
dioxus-sdk = { version = "0.6", optional = true }
dioxus-html = { version = "0.6", optional = true }

# Native file dialogs
rfd = { version = "0.15", optional = true }

# Clipboard access
arboard = { version = "3.2", optional = true }

# Browser opening
webbrowser = { version = "1.0", optional = true }

# System information
hostname = "0.3"

# TUI (Terminal User Interface) - Legacy support
ratatui = "0.26"
crossterm = "0.27"
tui-textarea = "0.4"
fuzzy-matcher = "0.3"
is-terminal = "0.4"

# Utilities for desktop app
console = "0.15"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# File system and parsing
walkdir = "2.4"
which = "6.0"
memmap2 = "0.9"
notify = "6.1"
tar = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.19"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-php = "0.21"
tree-sitter-swift = "0.7"
tree-sitter-highlight = "0.20"
regex = "1.10"
globset = "0.4"
ropey = "1.6"
lsp-types = "0.97"
git2 = "0.20.2"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# HTTP and network
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
tower-http = { version = "0.3", features = ["cors"] }
axum = { version = "0.6", features = ["ws"] }
axum-extra = "0.7"
tokio-tungstenite = "0.20"
tower = "0.4"
tower-layer = "0.3"
mime_guess = "2.0"

# Crypto and hashing
sha2 = "0.10"
md5 = "0.7"
flate2 = "1.0"
hmac = "0.12"
hex = "0.4"
blake3 = "1.5"

# System utilities
libc = "0.2"
futures-util = "0.3"
sysinfo = "0.30"

# Data structures and algorithms
lru = "0.12"
petgraph = "0.6"
similar = "2.3"
syntect = "5.2"

# AI and ML
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4", default-features = false, features = ["tokio"] }
tokenizers = "0.15"

# Utilities
bytes = "1.5"
rand = "0.8"
tempfile = "3.8"
num_cpus = "1.16"
serde_yaml = "0.9"
base64 = "0.22"
glob = "0.3"
open = "5.3.2"
portable-pty = "0.9.0"
alacritty_terminal = "0.25.0"
vt100 = "0.15.2"
nix = { version = "0.29", features = ["signal", "process"] }
winapi = { version = "0.3", features = ["processthreadsapi", "winnt"] }
html-escape = "0.2"

[dev-dependencies]
tempfile = "3.8"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["embeddings"]
embeddings = []
full = ["embeddings"]
legacy-tests = []
desktop-legacy = [
    "dioxus",
    "dioxus-desktop",
    "dioxus-router",
    "dioxus-signals",
    "dioxus-sdk",
    "dioxus-html",
    "manganis",
    "rfd",
    "arboard",
    "webbrowser"
]


[[bin]]
name = "hive-backend-server-enhanced"
path = "src/bin/hive-backend-server-enhanced.rs"

[package.metadata.bundle]
name = "Hive"
identifier = "com.hivetechs.hive"

[lib]
name = "hive_ai"
path = "src/lib.rs"

