[package]
name = "git_features_demo"
version = "1.0.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
dioxus-signals = "0.6.3"
git2 = "0.20.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "git_features_demo"
path = "src/main.rs"