[package]
name = "hive-tauri"
version = "2.0.3"
description = "Hive Consensus - AI-powered codebase intelligence with Tauri"
authors = ["HiveTechs Collective"]
edition = "2021"
default-run = "hive-tauri"

[lib]
name = "hive_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hive-tauri"
path = "src/main.rs"

[[bin]]
name = "test-window"
path = "src/test_window.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "simple-test"
path = "src/simple_test.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.2", features = [
    "protocol-asset",
    "tray-icon",
    "devtools"
] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Import existing Hive functionality
hive_ai = { path = "..", package = "hive" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
once_cell = "1.19"
parking_lot = "0.12"
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handler
